<resources>
    <string name="app_name">AppReciclaje</string>
    <string name="email_login">Email</string>
    <string name="password_login">Password</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="o_bien">O bien</string>
    <string name="registro">Registrarse Aquí</string>
    <string-array name="tipo_usuarios">
        <item>Organización / Empresa</item>
        <item>Colaborador</item>
    </string-array>
    <string name="confirmar_password">Confirmar Contraseña</string>
    <string name="crear_cuenta"> Crear Cuenta</string>
    <string name="nombre">Nombre</string>
    <string name="puntos">Puntos Obtenidos: *Insertar el número de puntos acumulados*</string>
    <string name="ver_recompensas">Ver Recompensas</string>
    <string name="bienvenido">Bienvenido, nombre de usuario! </string>
    <string name="ver_eventos">Ver eventos disponibles </string>
    <string name="crear_evento">Crear un nuevo evento</string>
    <string name="ver_mis_eventos">Ver mis eventos pendientes </string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="nombre_evento_label">Nombre</string>
    <string name="crear_evento_title">CREAR EVENTO</string>
    <string name="descripcion_label">Descripcion</string>
    <string name="fecha_evento_label">Fecha</string>
    <string name="categoria_evento_label">Categoria</string>
    <string name="crear_evento_boton">CREAR</string>
    <string name="borrar_evento_boton">BORRAR</string>
    <string name="cancelar_evento_boton">CANCELAR</string>
    <string name="nombre_del_evento">Nombre del Evento</string>
    <string name="descripcion_del_evento">Descripción del evento</string>
    <string name="categoria_del_evento">Categoría del Evento</string>
    <string name="dia">Día</string>
    <string name="hora">Hora</string>
</resources>